--- a/Aboutus.html
+++ b/Aboutus.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>ABOUT US</title>
+        <link rel="stylesheet" type="text/css" href="/css/Aboutus.css">
     </head>
     <body>
         <nav>
