--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <body>
         <nav>
             <ul>
-                <li><a href="Aboutus.html">About Us</a></li>
+                <li><a href="Aboutus.html">About us</a></li>
+                <li><a href="Contactus.html">Contact us</a></li>
             </ul>
         </nav>
         <div class="container">
