--- a/Aboutus.html
+++ b/Aboutus.html
@@ -8,9 +8,11 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/cv">CV</a></li>
-                <li><a href="/blog">Blog</a></li>
+                <li><a href="Aboutus.html">About us</a></li>
+                <li><a href="Contactus.html">Contact us</a></li>
+                <li><a href="Upcomingevents.html">Upcoming events</a></li>
+                <li><a href="Pastevents.html">Contact us</a></li>
+                <li><a href="Localnightlife&wheretoeat.html">Local nightlife & Where to eat</a></li>
             </ul>
         </nav>
         <div class="container">
