--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <li><a href="Aboutus.html">About us</a></li>
                 <li><a href="Contactus.html">Contact us</a></li>
                 <li><a href="Upcomingevents.html">Upcoming events</a></li>
-                <li><a href="Pastevents.html">Contact us</a></li>
+                <li><a href="Pastevents.html">Past events</a></li>
                 <li><a href="Localnightlife&wheretoeat.html">Local nightlife & Where to eat</a></li>
             </ul>
         </nav>
