--- a/index.html
+++ b/index.html
@@ -15,17 +15,8 @@
                 <li><a href="Localnightlife&wheretoeat.html">Local nightlife & Where to eat</a></li>
             </ul>
         </nav>
-        <div class="container">
-            <div class="blurb">
-                <h1>Hi there, I'm Hank Quinlan!</h1>
-                <p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-            </div><!-- /.blurb -->
-        </div><!-- /.container -->
-        <footer>
-            <ul>
-                <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-                <li><a href="https://github.com/hankquinlan%22%3Egithub.com/hankquinlan</a></li>
-            </ul>
-        </footer>
+        <video autoplay loop class="backgroundVideo">
+          <source src="assets/backgroundVideo.mp4" type="video/mp4">
+        </video>
     </body>
 </html>
