--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
                 <li><a href="Localnightlife&wheretoeat.html">Local nightlife & Where to eat</a></li>
             </ul>
         </nav>
-        <video autoplay loop class="backgroundVideo">
+        <video autoplay loop class="backgroundVideo" id="backgroundVideo">
           <source src="assets/backgroundVideo.mp4" type="video/mp4">
         </video>
+        <script>
+            document.getElementById("backgroundVideo").play();
+        </script>
     </body>
 </html>
