--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
+        <span class="welcomeTitle">Newcastle Nights</span>
         <nav>
             <ul>
                 <li><a href="Aboutus.html">About us</a></li>
