--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <video autoplay loop class="backgroundVideo" id="backgroundVideo">
             <source src="assets/backgroundVideo.mp4" type="video/mp4">
         </video>
-        <svg height="100" width="100" style="float:left" class="pattern-swatch">
-            <rect style="fill: url(#circles-1) #fff;" x="0" y="0" height="100" width="100"></rect>
-        </svg>
+        <div class="checkerboardPattern"> 
+        </div>
         <script>
             document.getElementById("backgroundVideo").play();
         </script>
