--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     </head>
     <body>
         <span class="welcomeTitle">Newcastle Nights</span>
-        <nav>
-            <ul>
-                <li><a href="Aboutus.html">About us</a></li>
-                <li><a href="Contactus.html">Contact us</a></li>
-                <li><a href="Upcomingevents.html">Upcoming events</a></li>
-                <li><a href="Pastevents.html">Past events</a></li>
-                <li><a href="Localnightlife&wheretoeat.html">Local nightlife & Where to eat</a></li>
-            </ul>
-        </nav>
+        
+        <button class="landingButtons leftmostButtonPosition" type="button" onclick="window.location.href = 'Aboutus.html';">About us</button>
+        <button class="landingButtons leftButtonPosition" type="button" onclick="window.location.href = 'Contactus.html';">Contact us</button>
+        <button class="landingButtons middleButtonPosition" type="button" onclick="window.location.href = 'Upcomingevents.html';">Upcoming events</button>
+        <button class="landingButtons rightButtonPosition" type="button" onclick="window.location.href = 'Pastevents.html';">Past events</button>
+        <button class="landingButtons rightmostButtonPosition" type="button" onclick="window.location.href = 'LocalNightlife.html';">Local nightlife</button>
+        
         <video autoplay loop class="backgroundVideo" id="backgroundVideo">
             <source src="assets/backgroundVideo.mp4" type="video/mp4">
         </video>
